# Nexus-AI

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/: celery_app.py  config.py  db.py  main.py
backend/src/adapters/: anthropic_adapter.py  base.py  openai_adapter.py
backend/src/api/: executions.py  websocket.py  workflows.py
backend/src/engine/: backtrack.py  budget.py  events.py  executor.py  planner.py
backend/src/memory/: store.py
backend/src/models/: __init__.py  execution.py  memory.py  workflow.py
backend/src/schemas/: execution.py  workflow.py
backend/src/services/: execution_service.py  workflow_service.py
backend/src/tasks/: execute_workflow.py
backend/tests/: test_backtrack.py  test_budget.py  test_memory.py  test_planner.py  test_websocket.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/workflows/[id]/: page.tsx
frontend/src/app/workflows/[id]/executions/: page.tsx
frontend/src/app/workflows/new/: page.tsx
frontend/src/components/: BudgetConfigModal.tsx  ExecutionViewer.tsx  NodePropertiesPanel.tsx  ThemeToggle.tsx  WorkflowCanvas.tsx
frontend/src/components/nodes/: AgentNode.tsx  ConditionalNode.tsx  ToolNode.tsx
frontend/src/hooks/: useExecution.ts  useWebSocket.ts
frontend/src/lib/: api.ts  types.ts
pricing/: models.json
(+1 files in other folders)
